# Durak_AI

./: README.md
src/: CMakeLists.txt  app.cpp  card.hpp  frame.cpp  frame.hpp  imagepanel.hpp  main.cpp  main.hpp
src/cli_app/: CMakeLists.txt  cardPrint.cpp  cardPrint.hpp  cliPlayer.cpp  cliPlayer.hpp  main.cpp  main.hpp
src/gimpFiles/: Tree.xcf  eyeMWatchingYou.xcf
src/gui_app/: app.cpp  app.hpp  background.hpp  card.cpp  frame.cpp  imagepanel.cpp  imagepanel.hpp
src/gui_app/gimpFiles/: Tree.xcf  minion.xcf  spades2.xcf  spades3.xcf  spades4.xcf  spadesAce.xcf
src/lib/: CMakeLists.txt
src/lib/durak_engine/: CMakeLists.txt
src/lib/durak_engine/inc/: cards.hpp  engine.hpp  game.hpp  gameInterface.hpp  player.hpp  table.hpp
src/lib/durak_engine/src/: cards.cpp  game.cpp  game.hpp  player.cpp  player.hpp  printTest.cpp  table.cpp  table.hpp
src/lib/durak_engine/test/: CMakeLists.txt  test.cpp
